# congress-mcp

./: .gitignore  README.md  RUN_THIS_SCRIPT.txt  complete-project-builder.py
congressional-data-mcp/: .env.template  .gitignore  CLAUDE.md  CLAUDE_AUTH_SETUP.md  CLAUDE_CONNECTOR_GUIDE.md  DEPLOYMENT.md  DOCUMENT_LIBRARY.md  Dockerfile  Dockerfile.remote  FIX_ERRORS.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_OPTIMIZED.md  README_REMOTE.md  STATELESS_AUTH_GUIDE.md  TOKEN_MANAGEMENT_README.md  analytics_dashboard.py  claude_desktop_auth_config.json  claude_desktop_config.json  docker-compose-simple.yml  docker-compose.remote.yml  docker-compose.yml  document_store.py  enactai_server.py  enactai_server_enhanced.py  enactai_server_local_auth.py  enactai_server_remote.py  enactai_server_stateless.py  import_supporting_docs.py  install.sh  install_claude_auth.sh  prometheus.yml  pyproject.toml  quickstart.sh  requirements.remote.txt  requirements.txt  requirements_optimized.txt  run_auth.sh  (+20 more)
congressional-data-mcp/deploy/: railway.json  render.yaml
congressional-data-mcp/docs/: API_REFERENCE.md  USAGE_EXAMPLES.md
congressional-data-mcp/document_storage/: 35a344dfefed_legislative_process.txt  47ede302a974_committee_system.txt  7f6418f745ed_BILLSTATUS-118hr2670.xml  e7e86332fca8_parliamentary_rules.txt
congressional-data-mcp/tests/: test_setup.py
