[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congressional-data-mcp"
version = "1.0.0"
description = "MCP server for unified access to Congress.gov and GovInfo APIs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "congress", "govinfo", "api", "government", "legislation"]
